--- a/params.yaml
+++ b/params.yaml
@@ -42,14 +42,17 @@ DATASET:
   RANDOM_STATE: 20
 
 Models:
+  
   LinearRegressionModel:
+    MODEL_NAME: LinearRegression
     HYPERPARAMETERS:
       fit_intercept : True
       copy_X : True
-      n_jobs: None # int
+      
 
 
   RandomForestModel:
+    MODEL_NAME: RandomForest
     HYPERPARAMETERS:
       n_estimators: 100
       criterion: 'squared_error'
@@ -66,9 +69,10 @@ Models:
 
 
   XGBoostModel:
+    MODEL_NAME: xGBoost
     HYPERPARAMETERS:
       loss: 'squared_error'
-      learning_rate: 0.1
+      learning_rate: 0.0001
       n_estimators: 100
       subsample: 1.0
       criterion: 'friedman_mse'
